[tool.poetry]
name = "dotfiles"
version = "1.0.0"
description = ""
authors = ["Takahiro Yano <speg03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^4.3"
jedi = "^0.14.0"
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
